--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "google-genai>=1.5.0",
+    "moviepy>=2.1.2",
     "pytubefix>=8.12.2",
     "streamlit>=1.43.2",
 ]
